feat: /hot api 원복